; ModuleID = '/home/carl/AnghaBench/rufus/src/libcdio/driver/extr_sector.c_cdio_lba_to_lsn.c'
source_filename = "/home/carl/AnghaBench/rufus/src/libcdio/driver/extr_sector.c_cdio_lba_to_lsn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CDIO_INVALID_LBA = common dso_local global i64 0, align 8
@CDIO_INVALID_LSN = common dso_local global i64 0, align 8
@CDIO_PREGAP_SECTORS = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @cdio_lba_to_lsn(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  %4 = load i64, i64* @CDIO_INVALID_LBA, align 8
  %5 = load i64, i64* %3, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %9

7:                                                ; preds = %1
  %8 = load i64, i64* @CDIO_INVALID_LSN, align 8
  store i64 %8, i64* %2, align 8
  br label %13

9:                                                ; preds = %1
  %10 = load i64, i64* %3, align 8
  %11 = load i64, i64* @CDIO_PREGAP_SECTORS, align 8
  %12 = sub nsw i64 %10, %11
  store i64 %12, i64* %2, align 8
  br label %13

13:                                               ; preds = %9, %7
  %14 = load i64, i64* %2, align 8
  ret i64 %14
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
